--- a/package.json
+++ b/package.json
@@ -14,17 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "debug": "^4.3.4",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-winston": "^4.2.0",
-    "ts-node": "^10.9.1",
-    "winston": "^3.8.2"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "source-map-support": "^0.5.21",
